--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<header>
 								<p>Пытаясь спасти свою экономику, США увеличили госдолг на</p>
 								<h1 class="price">42</h1>
-								<h2 class="price">42 трлн &#8381;</h2>
+								<h2 class="price">трлн &#8381;</h2>
 <p>только за сегодня,
 <p>однако, <a href="http://varlamov.me/2014/fin_prognozi/06.jpg">эксперты</a> <a href="http://www.youtube.com/watch?v=wIiPAUkDDNk">по-прежнему</a> <a href="http://www.interfax.ru/business/410001">прогнозируют</a> <a href="http://russian.rt.com/article/110879">скорый</a> <a href="http://varlamov.me/2014/fin_prognozi/02.jpg">коллапс</a> экономики.</p>
 
