--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
+<meta property="og:title" content="США-то скоро совсем сгниют!" />
+<meta property="og:image" content="onlywon.ru/images/header.jpg" />
+
 <style type="text/css">
 .price {
   font-family: 'PT Sans', serif;
