--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	<head prefix="og: http://ogp.me/ns#" >
 		<title>А США-то загнивают!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
