--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head prefix="og: http://ogp.me/ns#" >
+	<head >
 		<title>А США-то загнивают!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,8 +15,10 @@
                 rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-<meta property="og:title" content="США-то скоро совсем сгниют!" />
-<meta property="og:image" content="onlywon.ru/images/header.jpg" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="title" content="США-то загнивают!" />
+<meta name="description" content="Долг сша увеличивается, эксперты неумолимы." />
+<link rel="image_src" href="http://onlywon.ru/images/header.jpg" />
 
 <style type="text/css">
 .price {
